test-expected/large/webdataaccess/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: web-data-access
    foo.com/duversion: 1.6.9-20190923.1569266249780
    foo.com/version: 1.6.9
  labels:
    app.kubernetes.io/name: webdataaccess
    helm.sh/chart: webdataaccess-1.6.9
  name: webdataaccess
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webdataaccess
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webdataaccess
        app.kubernetes.io/name: webdataaccess
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-web-data-access:1.6.9-20190923.1569266249780
        imagePullPolicy: IfNotPresent
        name: webdataaccess
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
